crates/compiler/cypress/tests/snapshots/test_parse__pos_inf_float_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "inf\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("inf")

[=== formatted below ===]
inf
