crates/compiler/cypress/tests/snapshots/test_parse__positive_int_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "42\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("42")

[=== formatted below ===]

