crates/compiler/cypress/tests/snapshots/test_parse__record_destructure_def_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "# leading comment\n{ x, y } = 5\ny = 6\n\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            (BeginRecord Ident=>LowerIdent@1 Ident=>LowerIdent@3 EndRecord)
            InlineAssign=>OpAssign@5
            Num=>Int@6
        EndAssignDecl)
        (BeginAssignDecl
            Ident=>LowerIdent@7
            InlineAssign=>OpAssign@8
            Num=>Int@9
        EndAssignDecl)
        HintExpr
        Num=>Int@10
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Record([Ident("x"), Ident("y")]), IntBase10("5"))
Assign(Ident("y"), IntBase10("6"))
IntBase10("42")

[=== formatted below ===]

